# YY-0054-Air-Injection

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  errors.py  main.py  models.py
backend/app/services/: audit_logger.py  calibration_service.py  camera_adapter.py  light_controller.py  motion_controller.py  mvs_loader.py  reading_assist_service.py  result_store.py  session_manager.py
backend/app/utils/: image_utils.py
backend/tests/: test_api_integration.py  test_calibration_service.py  test_golden_regression.py  test_measurement_service.py  test_p0_compliance.py  test_session_manager_policy.py
backend/tests/golden_data/: README.md
data/results/20260324_173240_429625/: result.json
data/results/20260325_090133_932182/: result.json
data/results/20260325_104657_551608/: result.json
data/results/20260325_113243_464994/: result.json
data/results/20260325_124527_119599/: result.json
data/results/20260325_124624_477997/: result.json
data/results/20260325_124754_176934/: result.json
data/results/20260414_100627_464143/: result.json
data/results/20260414_101114_593953/: result.json
docs/medical-compliance/: 01-functional-inventory.md  02-gap-matrix-iec62304-iso14971-iso13485.md  03-phased-roadmap-p0-p1-p2.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AnimatedButton.jsx  CameraPreview.jsx  ColumnCard.jsx
frontend/src/pages/: DevicesPage.jsx  (+2 more)
scripts/: start-dev.bat  start-dev.ps1
