[project]
name = "air-column-assist-backend"
version = "0.1.0"
description = "Hikvision air column measurement assistant backend"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "opencv-python-headless>=4.10.0.84",
  "numpy>=1.26.4",
  "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "/app",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
